--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
+    "baseUrl": "./",
+    "paths": {
+      "*": ["src/*"]
+    },
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
