--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host --mode localhost",
+    "serve:local": "vite --host --mode localhost",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.3.0",
     "@mantine/core": "7.3.0",
+    "@mantine/form": "^7.3.0",
     "@mantine/hooks": "7.3.0",
+    "embla-carousel-autoplay": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
