--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host --mode localhost",
     "serve:local": "vite --host --mode localhost",
     "deploy": "gh-pages -d dist",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --mode localhost",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
