--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/form": "^7.3.0",
     "@mantine/hooks": "7.3.0",
     "embla-carousel-autoplay": "^7.1.0",
+    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
